# dyndns-updater

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
dyndns_updater/: __init__.py  __main__.py  ddu.py  provider.py
