[tool.poetry]
name = "dyndns-updater"
version = "0.1.0"
description = "Package for updating DynDNS services"
authors = ["Markus Frings <coding@frings-mail.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
