[tool.poetry]
name = "dyndns-updater"
version = "0.1.0"
description = "Package for updating DynDNS services"
authors = ["Markus Frings <coding@frings-mail.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[tool.isort]
profile="black"
force_single_line=true
line_length = 100
 
[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
